--- a/beamerthemeCustom.sty
+++ b/beamerthemeCustom.sty
@@ -200,26 +200,27 @@
 
 \beamer@tocsectionnumber=0
 
-\AtBeginSection[]{
-    %\hoffset=-0.5\beamer@leftsidebar
-  \begin{frame}[t]
-      %\centering
-      %\vskip-6pt%
-      %\hskip-\beamer@sidebarwidth%
-      %\begin{beamercolorbox}[wd=\paperwidth]{Title bar}
-      %    \centering
-      %    \vskip+10pt%
-      %    \pgfuseimage{logo}%
-      %    \vskip+10pt
-
-      %\end{beamercolorbox}
-
-      \vspace{50pt}
-      \centering
-
-%      Sezione \thesection:\\\vspace{1em}
-      {\usebeamercolor[fg]{title}\textls[90]{\MakeUppercase{\expandafter\protect\insertsectionhead}}}
-
-  \end{frame}
+%\AtBeginSection[]{
+%    %\hoffset=-0.5\beamer@leftsidebar
+%  \begin{frame}[t]
+%      %\centering
+%      %\vskip-6pt%
+%      %\hskip-\beamer@sidebarwidth%
+%      %\begin{beamercolorbox}[wd=\paperwidth]{Title bar}
+%      %    \centering
+%      %    \vskip+10pt%
+%      %    \pgfuseimage{logo}%
+%      %    \vskip+10pt
+%
+%      %\end{beamercolorbox}
+%
+%      \vspace{50pt}
+%      \centering
+%
+%%      Sezione \thesection:\\\vspace{1em}
+%      {\usebeamercolor[fg]{title}\textls[90]{\MakeUppercase{\expandafter\protect\insertsectionhead}}}
+%
+%  \end{frame}
 %\hoffset=0pt
-}
+%}
+
