update after first karl

--- a/beamerthemeCustom.sty
+++ b/beamerthemeCustom.sty
@@ -193,7 +193,7 @@
 
     \vspace{20pt}
 
-    Fellow presentation\\\vspace{10pt}
+    Fellow project presentation\\\vspace{10pt}
     \insertdate
 
 }
