--- a/stimulate_slides.tex
+++ b/stimulate_slides.tex
@@ -110,7 +110,7 @@
 \section{Aim}
 
 \begin{frame}
-    \frametitle{Application to lattice gauge theories}
+    \frametitle{Application to statistical physics and lattice gauge theories}
     \begin{itemize}
         \item
             We will start with 1+1 dimensional models that are of interest in condensed matter and high energy physics:
@@ -121,7 +121,7 @@
                 \item Gross-Neveu model.
             \end{itemize}
         \item
-            We will add a $\theta$ term.
+            We will add a $\theta$ term to the gauge theories.
         \item
             In presence of a $\theta$ term, MC simulations suffer from the sign problem, while quantum simulators don't.
         \item
@@ -169,6 +169,8 @@
 \titlepage
 \end{frame}
 \hoffset=0in % restore left margin
+
+\section{Appendix}
 
 \begin{frame}
     \frametitle{The sign problem in computational physics}
