--- a/stimulate_slides.tex
+++ b/stimulate_slides.tex
@@ -128,7 +128,8 @@
                 \item Gross-Neveu model.
             \end{itemize}
         \item
-            In presence of a $\theta$ term, MC simulations of gauge theories suffer from the sign problem, while quantum simulators don't.
+            In presence of a $\theta$ term, MC simulations of gauge theories suffer from the sign problem (complex action),
+            while quantum simulators don't (no integral evaluation, only direct measures).
         \item
             With Quantum Computers it may be possible to have results not obtainable with classic computers.
         \item
@@ -152,7 +153,7 @@
         \item
             There is a Quantum advantage if a quantum computer can solve a problem that a classical computer cannot.
         \item
-            Not achieved yet. IBM Q and Rigetti (among others) are working on it for years.
+            Not achieved yet. IBM Q, Rigetti, Google and NASA are working on it for years.
         \item
             We expect that quantum physics problems will have greater advantages from quantum computers:
             \begin{itemize}
