--- a/stimulate_slides.tex
+++ b/stimulate_slides.tex
@@ -60,7 +60,7 @@
 }
 
 \begin{frame}
-    \frametitle{Quantum Computer and Quantum Simulation}
+    \frametitle{Quantum computer and quantum simulation}
     \begin{itemize}
         \item
             Quantum computers memory is made by $n$ connected qubits.
@@ -128,10 +128,10 @@
                 \item Gross-Neveu model.
             \end{itemize}
         \item
-            In presence of a $\theta$ term, MC simulations of gauge theories suffer from the sign problem (complex action),
+            In presence of a $\theta$ term, MC simulations of gauge theories suffer from the sign problem (highly oscillatory integrand),
             while quantum simulators don't (no integral evaluation, only direct measures).
-        \item
-            With Quantum Computers it may be possible to have results not obtainable with classic computers.
+        %\item
+        %    With Quantum Computers it may be possible to have results not obtainable with classic computers.
         \item
             We plan to apply the same idea to 2+1 dimensional gauge theories, abelian and non-abelian, and coupled to matter.
     \end{itemize}
@@ -148,7 +148,7 @@
 \section{Expected results and impact}
 
 \begin{frame}
-    \frametitle{Quantum advantage}
+    \frametitle{Quantum advantage and sign problem}
     \begin{itemize}
         \item
             There is a Quantum advantage if a quantum computer can solve a problem that a classical computer cannot.
@@ -163,12 +163,15 @@
         \item
             System with the sign problem could show quantum advantages:
             \begin{itemize}
-                \item Path integrals evaluation becomes very complicated.
-                \item In some cases impossible.
+                \item Path integrals evaluation becomes very complicated. In some cases impossible.
                 \item Even an imprecise result with a quantum computer could show a quantum advantage.
             \end{itemize}
+        \item
+            Sign problem arises in many contexts. Quantum computing could be an answer in some cases.
+
     \end{itemize}
 \end{frame}
+
 
 \hoffset=-0.5\leftsidebar
 {
